--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,11 +10,10 @@
 <item>app.nicegram</item>
 <item>org.telegram.messenger.web</item>
 <item>org.telegram.messenger.beta</item>
-<item>com.exteragram.messenger</item>
-<item>tw.nekomimi.nekogram</item>
 <item>org.forkclient.messenger.beta</item>
 <item>org.forkgram.messenger</item>
 <item>nu.gpu.nagram</item>
 <item>com.iMe.android.web</item>
+<item>org.open.telegram.market</item>
 </string-array>
 </resources>
